--- a/grpc-exec/src/CMakeLists.txt
+++ b/grpc-exec/src/CMakeLists.txt
@@ -12,58 +12,56 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-# cmake build file for C++ helloworld example.
+# cmake build file for C++ grpc_exec example.
 # Assumes protobuf and gRPC have been installed using cmake.
 # See cmake_externalproject/CMakeLists.txt for all-in-one cmake build
-# that automatically builds all the dependencies before building helloworld.
+# that automatically builds all the dependencies before building grpc_exec.
 
 cmake_minimum_required(VERSION 3.5.1)
 
-project(HelloWorld C CXX)
+project(grpc_exec C CXX)
 
-include(../cmake/common.cmake)
+include(cmake/common.cmake)
 
 # Proto file
-get_filename_component(hw_proto "../../protos/helloworld.proto" ABSOLUTE)
-get_filename_component(hw_proto_path "${hw_proto}" PATH)
+get_filename_component(ge_proto "./grpc_exec.proto" ABSOLUTE)
+get_filename_component(ge_proto_path "${ge_proto}" PATH)
 
 # Generated sources
-set(hw_proto_srcs "${CMAKE_CURRENT_BINARY_DIR}/helloworld.pb.cc")
-set(hw_proto_hdrs "${CMAKE_CURRENT_BINARY_DIR}/helloworld.pb.h")
-set(hw_grpc_srcs "${CMAKE_CURRENT_BINARY_DIR}/helloworld.grpc.pb.cc")
-set(hw_grpc_hdrs "${CMAKE_CURRENT_BINARY_DIR}/helloworld.grpc.pb.h")
+set(ge_proto_srcs "${CMAKE_CURRENT_BINARY_DIR}/grpc_exec.pb.cc")
+set(ge_proto_hdrs "${CMAKE_CURRENT_BINARY_DIR}/grpc_exec.pb.h")
+set(ge_grpc_srcs "${CMAKE_CURRENT_BINARY_DIR}/grpc_exec.grpc.pb.cc")
+set(ge_grpc_hdrs "${CMAKE_CURRENT_BINARY_DIR}/grpc_exec.grpc.pb.h")
 add_custom_command(
-      OUTPUT "${hw_proto_srcs}" "${hw_proto_hdrs}" "${hw_grpc_srcs}" "${hw_grpc_hdrs}"
+      OUTPUT "${ge_proto_srcs}" "${ge_proto_hdrs}" "${ge_grpc_srcs}" "${ge_grpc_hdrs}"
       COMMAND ${_PROTOBUF_PROTOC}
       ARGS --grpc_out "${CMAKE_CURRENT_BINARY_DIR}"
         --cpp_out "${CMAKE_CURRENT_BINARY_DIR}"
-        -I "${hw_proto_path}"
+        -I "${ge_proto_path}"
         --plugin=protoc-gen-grpc="${_GRPC_CPP_PLUGIN_EXECUTABLE}"
-        "${hw_proto}"
-      DEPENDS "${hw_proto}")
+        "${ge_proto}"
+      DEPENDS "${ge_proto}")
 
 # Include generated *.pb.h files
 include_directories("${CMAKE_CURRENT_BINARY_DIR}")
 
-# hw_grpc_proto
-add_library(hw_grpc_proto
-  ${hw_grpc_srcs}
-  ${hw_grpc_hdrs}
-  ${hw_proto_srcs}
-  ${hw_proto_hdrs})
-target_link_libraries(hw_grpc_proto
+# ge_grpc_proto
+add_library(ge_grpc_proto
+  ${ge_grpc_srcs}
+  ${ge_grpc_hdrs}
+  ${ge_proto_srcs}
+  ${ge_proto_hdrs})
+target_link_libraries(ge_grpc_proto
   ${_REFLECTION}
   ${_GRPC_GRPCPP}
   ${_PROTOBUF_LIBPROTOBUF})
 
 # Targets greeter_[async_](client|server)
 foreach(_target
-  greeter_client greeter_server 
-  greeter_callback_client greeter_callback_server 
-  greeter_async_client greeter_async_client2 greeter_async_server)
+  grpc_exec)
   add_executable(${_target} "${_target}.cc")
   target_link_libraries(${_target}
-    hw_grpc_proto
+    ge_grpc_proto
     ${_REFLECTION}
     ${_GRPC_GRPCPP}
     ${_PROTOBUF_LIBPROTOBUF})
