--- a/grpc-exec/Makefile
+++ b/grpc-exec/Makefile
@@ -27,7 +27,8 @@ TARGET_LDFLAGS += -latomic $(if $(CONFIG_USE_GLIBC),-lm)
 
 CMAKE_OPTIONS += -DBUILD_SHARED_LIBS=OFF \
 	-DCMAKE_FIND_ROOT_PATH_MODE_PROGRAM=NEVER \
-	-DCMAKE_FIND_ROOT_PATH_MODE_PACKAGE=ONLY
+	-DCMAKE_FIND_ROOT_PATH_MODE_PACKAGE=ONLY \
+	-DCMAKE_CROSSCOMPILING=ON
 
 define Package/$(PKG_NAME)
   SECTION:=base
